welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: illegal start of simple expression
  if (getX()!=l && getY()!=h)){
                             ^ZigZag:22: error: Missing closing brace `}' assumed here
} 
^